[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cossin_wrapper"
version = "0.0.1"
authors = [
  { name="Santiago Federico Caracciolo", email="santiago.caracciolo@gmail.com" },
]
description = "A wrapper of cossin function of SciPy to return the sparse matrices"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "scipy"
]